# airflow-python-docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
dags/: docker-dag.py
download/: __init__.py
preprocessing/: __init__.py
processing/: __init__.py  array.py
