[tool.poetry]
name = "airflow-example"
version = "0.1.0"
description = ""
authors = ["Thibauld Croonenborghs <thibauld.croonenborghs@tomtom.com>"]
packages = [
    { include = "download" },
    { include = "preprocessing" },
    { include = "processing" }
    ]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
apache-airflow = "^1.10.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
